# opencv-playground

./: CMakeLists.txt  README.md  build.cmd  local-build.cmd
.github/workflows/: build.yml
src/: main.cpp
